[package]
name = "banoogle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
hashbrown = { version = "0.12", features = ["rayon"] }
lazy_static = "1.4"
rayon = "1.5"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
