[package]
name = "banoogle-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
banoogle-bang = { path = "../bang" }
sled = "0.34.7"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
