[package]
name = "banoogle"
version = "0.1.0"
edition = "2021"

[dependencies]
banoogle-bang = { path = "../bang" }
axum = "0.5"
sled = "0.34.7"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
